Added default palette

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h2>Register With Us</h2>
     <div class="form-control">
         <label for="username">Username</label>
-        <input type="text" id="username" placeholder = "Enter your username">
+        <input type="text" id="username" placeholder = "Enter your username" autofocus>
         <small>Error Message</small>
     </div>
     <div class="form-control">
